--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
                 body{
                     /*background: #f1f1f1;*/
                 }
+
+                .row.column.log-in-form{
+                  border-color: transparent;
+                }
+
                 .title-bar {
                     background: #4e4e4e;
                     padding: 0.9rem;
